--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -47,6 +47,7 @@
         align-items: center;
         justify-content: center;
         gap: 15px;
+        margin-right: 57%;
 
         i {
             font-size: 30px;
@@ -102,7 +103,7 @@
         a {
             list-style: none;
             position: relative;
-
+           color: #4F4F4F;
             li {
                 display: inline;
                 margin: 3px;
@@ -135,6 +136,9 @@
     top: 0;
     position: absolute;
     z-index: 5;
+    transform: translateX(-239px);
+    transition: .4s;
+    position: fixed;
 
     span {
         position: relative;
@@ -147,29 +151,32 @@
         list-style: none;
         padding: 0 !important;
         line-height: 52px;
-        li{
+
+        li {
             border-bottom: 1px solid #eaeaea;
             padding-left: 4%;
             color: #000;
         }
-        .activ{
+
+        .activ {
             color: #e9ac98;
 
         }
     }
 }
+
 #overlay {
-    position: fixed; 
-    width: 100%; 
-    height: 100%; 
+    position: fixed;
+    width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0,0,0,0.5); 
-    z-index: 2; 
-    cursor: pointer; 
-  }
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+    cursor: pointer;
+}
 
 #responsive-nav-area {
     display: block;
@@ -507,6 +514,7 @@
             align-items: center;
             gap: 17px;
             color: #58525e;
+            border-radius: 7px;
             font-family: Roboto, Helvetica Neue, sans-serif;
             text-decoration: none;
             border: 1px solid #58525e;
@@ -539,7 +547,7 @@
                     position: absolute;
                     transition: all .2s ease-out;
                     left: 10%;
-                    bottom: 39%;
+                    bottom: 37%;
                     font-size: 13px;
 
 
@@ -664,12 +672,14 @@
         display: flex;
         justify-content: center;
         padding-top: 2%;
+        
 
         a {
             position: absolute;
             display: flex;
             align-items: center;
             text-align: center;
+            border-radius: 7px;
             gap: 17px;
             color: #58525e;
             font-family: Roboto, Helvetica Neue, sans-serif;
@@ -777,6 +787,32 @@
         color: #58525e;
         border-radius: 7px;
         font-weight: 500;
+        display: block;
+        background: linear-gradient(to right, #e9ac98 50%, white 50%);
+        background-size: 200% 100%;
+        background-position: right bottom;
+        transition: all .5s ease-out;
+
+        i {
+            position: relative;
+            left: 7%;
+        }
+
+        &:hover {
+
+            background-position: left bottom;
+            border: none;
+            text-align: right;
+
+            i {
+                position: absolute;
+                left: 8%;
+                top: 22px;
+                transition: all .5s ease-out;
+
+            }
+
+        }
 
     }
 }
@@ -967,7 +1003,7 @@
             position: absolute;
             z-index: -11;
             opacity: 0;
-            transition: 0.3s;
+            transition: 0.7s;
 
             img {
                 width: 100%;
