--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -43,7 +43,7 @@
 
     .block-ApImage {
         width: 80%;
-        height: 96%;
+        height: 100%;
         margin-left: 3%;
 
         img {
@@ -56,8 +56,8 @@
         text-align: center;
         margin-right: 15%;
         position: relative;
-        top: 7%;
-        
+        top: 5%;
+
 
         .intro-text {
             h4 {
@@ -66,21 +66,15 @@
                 color: #213e36;
             }
 
-            span {
-                font-size: 16px;
-                color: #9faaa7;
-                margin-left: 58px;
-                position: relative;
-                top: 23px;
-            }
         }
     }
 
     .text-about {
         position: relative;
-        top: 18%;
+        top: 22px;
         left: 7%;
         padding: 0% 14% 0% 6%;
+
         p {
             font-size: 14px;
             line-height: 24px;
@@ -88,12 +82,230 @@
             text-align: justify;
         }
     }
-    .image-form{
+
+    .image-form {
         position: relative;
-        top: 22%;
-       img{
-        width: 97%;
-        height: 94%;
-       }
+        top: 41px;
+
+        img {
+            width: 97%;
+            height: 94%;
+        }
     }
+
+    .container-about {
+        height: 782px;
+    }
+}
+
+.btn-hov {
+    position: relative;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    gap: 17px;
+    font-family: Roboto, Helvetica Neue, sans-serif;
+    text-decoration: none;
+    border: 1px solid #58525e;
+    font-size: 11px;
+    height: 56px;
+    width: 148px;
+    color: #000;
+    font-weight: 500;
+    text-transform: uppercase;
+    display: block;
+    background: linear-gradient(to right, #e9ac98 50%, white 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+    transition: all .3s ease-out;
+
+    i {
+        position: relative;
+        left: 7%;
+    }
+
+
+}
+
+#our-contact {
+    padding-top: 7%;
+
+    .blok-ApRawHtml {
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-top: 1px solid #666;
+        border-bottom: 1px solid #666;
+
+
+        .contact-area {
+            text-align: center;
+            width: 630px;
+            padding-top: 4%;
+            padding-bottom: 6%;
+            font-size: 24px;
+            line-height: 36px;
+            color: #000;
+
+            a {
+
+                left: 39%;
+                padding: 11px 12px 17px 17px;
+
+                &:hover {
+                    color: #000;
+                    padding: 11px 35px 17px 17px;
+                    background-position: left bottom;
+                    border: none;
+                    text-align: right;
+
+                    i {
+                        position: absolute;
+                        left: 20%;
+                        top: 24px;
+                        transition: all .5s ease-out;
+
+                    }
+
+                }
+            }
+
+        }
+
+    }
+}
+
+#title_block {
+    .sub-title {
+        text-align: center;
+        padding-top: 8%;
+
+        h4 {
+            text-align: center;
+            font-family: "Alex Brush", cursive;
+            font-size: 81px;
+            font-weight: 500;
+            color: #213e36;
+        }
+
+        span {
+            font-size: 16px;
+            color: #9faaa7;
+        }
+    }
+
+}
+
+#about-box {
+    padding-top: 6%;
+
+    .about-item {
+        .top {
+            align-items: center;
+
+            .icon {
+                width: 37px;
+                height: 37px;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+
+            .title {
+                font-size: 20px;
+                line-height: 30px;
+                color: #000;
+                padding-left: 20px;
+                width: 147px;
+            }
+        }
+
+        p {
+            margin-top: 36px;
+            margin-bottom: 54px;
+            text-align: justify;
+            font-size: 14px;
+            line-height: 24px;
+            color: #4b5955;
+        }
+
+        a {
+            padding: 20px 12px 17px 17px;
+
+            &:hover {
+                color: #000;
+                padding: 23px 35px 17px 17px;
+                background-position: left bottom;
+                border: none;
+                text-align: right;
+
+                i {
+                    position: absolute;
+                    left: 20%;
+                    top: 26px;
+                    transition: all .5s ease-out;
+
+                }
+
+            }
+        }
+
+        .our-btn {
+            padding: 20px 23px 17px 20px;
+
+            &:hover {
+                padding: 23px 12px 17px 0px;
+
+                i {
+                    left: 15%;
+                }
+            }
+        }
+
+        .our-bt {
+            padding: 21px 11px 17px 0px;
+
+            &:hover {
+                padding: 22px 17px 17px 17px;
+
+                i {
+                    left: 23%;
+                    top: 24px;
+                }
+            }
+        }
+        .about-cont{
+            margin-bottom: 80px;
+        }
+    }
+
+
+}
+
+#block-carousel {
+    margin-top: 3%;
+
+    .mySwiper {
+        .slide {
+            .slide-color {
+                color: #000;
+            }
+        }
+        .slide-cont{
+            top: 15%;
+        }
+    }
+    .about-pagination{
+        bottom: 110px;
+        span{
+            background-color: #666;
+            
+        }
+    }
+   
+
+
 }
