blog page is ready

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -104,6 +104,8 @@
             list-style: none;
             position: relative;
            color: #4F4F4F;
+           text-decoration: none;
+           cursor: pointer;
             li {
                 display: inline;
                 margin: 3px;
