--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -18,14 +18,19 @@
             display: flex;
             align-items: center;
             padding: 0px !important;
+            gap: 4px;
 
             li {
                 font-size: 14px;
                 margin: 4px;
                 margin: 0 !important;
+                span{
+                    color: #666;
+                }
             }
 
             a {
+                text-decoration: none;
                 color: #9faaa7;
             }
 
@@ -39,7 +44,7 @@
 }
 
 #story-content {
-    padding-top: 10%;
+    padding-top: 5%;
 
     .block-ApImage {
         width: 80%;
