shop page is ready

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,10 @@
 @import './home';
-@import './_about';
-@import './_blog';
+@import './about';
+@import './blog';
+@import './contact';
+@import './layout';
+@import './shop';
+@import './productDetail';
 @import './responsive';
 
 
