--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -6,7 +6,7 @@
     }
 
     .blog-cart {
-
+        position: relative;
         margin-bottom: 10%;
 
         .post-thumb {
@@ -15,6 +15,7 @@
             img {
                 width: 100%;
                 height: 446px;
+                transition: 1s;
             }
         }
 
@@ -79,6 +80,58 @@
 
 
         }
+
+        .post-thumb {
+            overflow: hidden;
+
+            a {
+                img {
+                    &:hover {
+                        transform: scale(1.2);
+                       
+                    }
+                }
+            }
+        }
+
+        .single-post-date {
+            z-index: 1;
+            width: 76px;
+            height: 76px;
+            text-align: center;
+            border-radius: 100%;
+            display: inline-block;
+            position: absolute;
+            padding: 10px 16px;
+            background-color: #fff;
+            left: 30px;
+            top: 30px;
+
+            span {
+                font-family: inherit;
+
+                &:first-child {
+                    font-size: 20px;
+                    font-weight: 500;
+                    &::before{
+                        content: "";
+                        height: 2px;
+                        width: 44px;
+                        display: block;
+                        background-color: #c8c8c8;
+                        position: absolute;
+                        top: 39px;
+                        font-size: 20px;
+                        font-weight: 500;
+                    }
+                }
+
+                &:last-child {
+                    font-size: 14px;
+                    text-transform: uppercase;
+                }
+            }
+        }
     }
 
     .container-blog {
@@ -106,6 +159,7 @@
         margin-bottom: 8%;
 
         input {
+            outline: none;
             position: relative;
             left: 6%;
             width: 100%;
@@ -170,6 +224,7 @@
                 img {
                     width: 100%;
                     height: 100%;
+
                 }
             }
 
